refactor: rename methods for clarity